[package]
name = "spotify-toolbox"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
bytes = "1.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
dirs = "5.0.1"
dotenv = "0.15.0"
lazy-regex = "3.4.1"
rand = "0.8.5"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
